GH-0000 perf: add chunked async sketch ingestion